--- a/grid.html
+++ b/grid.html
@@ -316,12 +316,13 @@
       const col = $(`td:nth-child(${$(e).index()+1})`),
         a = colArgs(col), r = crunch(a);
       for (var key in r) {
+        const v0 = rnd(r[key][0]), v1 = rnd(r[key][1]);
         col.filter('#results~tr:not(.th) td').filter((i,e)=>$(e).data('rowNm')==key).html(
           `<div>
-            <span ${key=='Motor Shaft Power' && r[key][0]>nm('motor_rated_power',col).val() ? 'style=background-color:#FECB00' : ''}>
-              ${rnd(r[key][0])}
+            <span ${key=='Motor Shaft Power' && v0>nm('motor_rated_power',col).val() ? 'style=background-color:#FECB00' : ''}>
+              ${v0}
             </span>
-            <span style='color:#5d9300'>${rnd(r[key][1])}</span>
+            <span style='color:#5d9300'>${v1>-1 ? v1 : ''}</span>
           </div>`);
       }          
       vdTol('motor_rated_flc',col,flc(a),.5);
