--- a/units.html
+++ b/units.html
@@ -100,6 +100,7 @@
 		chg(PRESSURE,HeadTool,['Ps','Pg_s','Pd']);		
 		chg(FLOW, Curve, [0,2]);
 		chg(DIST, Curve, [1,3]);
+		chg(POWER,MotorPerf,'motor_rated_power');
 		Units = nunits;
 		save();
 	}
