--- a/motor_perf.html
+++ b/motor_perf.html
@@ -101,8 +101,7 @@
 		ctx.beginPath();
 		
 		for (let x=0; rnd(x)<=120; x+=12/10) {			
-			ctx.lineTo(xPos(x), yPos(x));	
-			console.log(x);	
+			ctx.lineTo(xPos(x), yPos(Bridge.motorPerformance({load_factor:x})));	
 		}
 		ctx.stroke();
 	}
