--- a/motor_perf.html
+++ b/motor_perf.html
@@ -101,7 +101,14 @@
 		ctx.beginPath();
 		
 		for (let x=0; rnd(x)<=120; x+=12/10) {			
-			ctx.lineTo(xPos(x), yPos(Bridge.motorPerformance({load_factor:x})));	
+			ctx.lineTo(xPos(x), yPos(Bridge.motorPerformance({
+				line: 1,
+				motor_rated_speed: 1780,
+				motor_rated_power: 200,
+				efficiency_class: 0,
+				efficiency: 0,
+				load_factor: x
+			})));	
 		}
 		ctx.stroke();
 	}
