--- a/motor_perf.html
+++ b/motor_perf.html
@@ -107,7 +107,7 @@
 				motor_rated_power: 200,
 				efficiency_class: 0,
 				efficiency: 0,
-				load_factor: x
+				load_factor: x/100
 			})));	
 		}
 		ctx.stroke();
