--- a/motor_perf.html
+++ b/motor_perf.html
@@ -103,8 +103,18 @@
 		for (let x=0; rnd(x)<=120; x+=12/10) {			
 			ctx.lineTo(xPos(x), yPos(Bridge.motorPerformance(setData({
 				load_factor: x/100
-			})).motor_efficiency));	
+			})).efficiency));	
 		}
+		ctx.stroke();
+		ctx.strokeStyle = "#1F82BB";
+		//ctx.endPath();
+		ctx.beginPath();
+		for (let x=0; rnd(x)<=120; x+=12/10) {			
+			ctx.lineTo(xPos(x), yPos(Bridge.motorPerformance(setData({
+				load_factor: x/100
+			})).current));	
+		}
+		
 		ctx.stroke();
 	}
 	
