--- a/motor_perf.html
+++ b/motor_perf.html
@@ -106,7 +106,9 @@
 			})).efficiency));	
 		}
 		ctx.stroke();
-		ctx.strokeStyle = "#1F82BB";
+		//ctx.strokeStyle = "#1F82BB";
+		ctx.strokeStyle = "white";
+
 		//ctx.endPath();
 		ctx.beginPath();
 		for (let x=0; rnd(x)<=120; x+=12/10) {			
