--- a/motor_perf.html
+++ b/motor_perf.html
@@ -88,11 +88,11 @@
 
 		ctx.fillStyle = '#FECB00';
 		ctx.font = '14px san serif';
-		ctx.fillText('FLOW RATE',Cnv.width/2,Cnv.height-.33*PAD);
+		ctx.fillText('Motor Shaft Load (%)',Cnv.width/2,Cnv.height-.33*PAD);
 		
 		ctx.translate(.33*PAD,Cnv.height/2);
 		ctx.rotate(-Math.PI/2);
-		ctx.fillText('HEAD',0,0);	
+		ctx.fillText('Current; Efficiency; PF (%)',0,0);	
 		
 		ctx.restore();
 
