--- a/motor_perf.html
+++ b/motor_perf.html
@@ -92,7 +92,16 @@
 		
 		ctx.translate(.33*PAD,Cnv.height/2);
 		ctx.rotate(-Math.PI/2);
-		ctx.fillText('Current; Efficiency; PF (%)',0,0);	
+		ctx.fillStyle = 'white';
+		let tw = ctx.measureText('Current; ').width;
+		ctx.fillText('Current',0,0);
+		ctx.fillStyle = '#FECB00';
+		let tw2 = ctx.measureText('Efficiency; ').width;
+		ctx.fillText('Efficiency; ',tw,0);
+		ctx.fillStyle = '#1F82BB'
+		ctx.fillText('PF',tw+tw2,0);
+		
+		//ctx.fillText('Current; Efficiency; PF (%)',0,0);	
 		
 		ctx.restore();
 
