--- a/curve.html
+++ b/curve.html
@@ -81,7 +81,7 @@
 				step = Math.round(max / 15 / m10) * m10;
 		return [max, step, Math.ceil(max / step)];
 	}
-	function plot() {
+	function plot() {		
 		const 	f1 = Curve.plot[0],
 				h1 = Curve.plot[1],				
 				f2 = Curve.plot[2],
@@ -93,38 +93,20 @@
 				ctx = Cnv.getContext('2d'),
 				PAD = 50;
 
+		P = {
+			cnv: Cnv,
+			padX: 25,
+			padY: 50
+		};
+		[P.maxX,P.stepX,P.cntX] = steps(f1,f2);
+		[P.maxY,P.stepY,P.cntY] = steps(h1,h2);
+
 		$('#Hs').text(rnd(hS));
 		$('#K').text(rnd(k,6));
 		showHdBtn('hide');
 		$('#plot').show();
 
-		ctx.strokeStyle = "#5d9300";
-		ctx.fillStyle = "white";
-		ctx.textAlign = 'center';
-		ctx.textBaseline = 'middle';
-		ctx.font = '12px san serif';
-		
-		function xPos(x) {
-			return x*(Cnv.width-PAD*2)/(xStep*xCnt)+PAD;
-		}
-		function yPos(y) {
-			return (yStep*yCnt-y)*(Cnv.height-PAD*2)/(yStep*yCnt)+PAD;
-		}
-		ctx.beginPath();
-		for (let i=0; i<=xCnt; i++) {
-			const x = i*xStep, xp = xPos(x);
-			ctx.moveTo(xp,PAD);
-			ctx.lineTo(xp,Cnv.height-PAD);	
-			ctx.fillText(x,xp,Cnv.height-.75*PAD);	
-		}
-		for (let j=0; j<=yCnt; j++) {
-			const y = j*yStep, yp = yPos(y);
-			ctx.moveTo(PAD,yp);
-			ctx.lineTo(Cnv.width-PAD,yp);	
-			ctx.fillText(y,.75*PAD,yp);	
-		}
-		ctx.stroke();
-		ctx.save();
+		setupPlot();
 
 		ctx.fillStyle = '#FECB00';
 		ctx.font = '14px san serif';
