--- a/index.html
+++ b/index.html
@@ -95,6 +95,44 @@
 
     <div id=container></div>
     <script>
+    // canvas
+      function xPos(x) {
+        return x*(P.cnv.width-P.padX*2)/(P.stepX*P.cntX)+P.padX;
+      }
+      function yPos(y) {
+        return (P.stepY*P.cntY-y)*(P.cnv.height-P.padY*2)/(P.stepY*P.cntY)+P.padY;
+      }
+
+      function setupPlot() {
+        const ctx = P.cnv.getContext('2d');
+
+        ctx.strokeStyle = "#5d9300";
+        ctx.fillStyle = "white";
+        ctx.textAlign = 'center';
+        ctx.textBaseline = 'middle';
+        ctx.font = '12px san serif';
+        
+        ctx.beginPath();
+        ctx.textBaseline = 'top';
+        for (let i=0; i<=P.cntX; i++) {
+          const x = i*P.stepX, xp = xPos(x);
+          ctx.moveTo(xp,P.padY);
+          ctx.lineTo(xp,P.cnv.height-P.padY);	
+          ctx.fillText(x,xp,P.cnv.height-P.padY+5);	
+        }
+        ctx.textAlign = 'right';
+        ctx.textBaseline = 'middle';
+        for (let j=0; j<=P.cntY; j++) {
+          const y = j*P.stepY, yp = yPos(y);
+          ctx.moveTo(P.padX,yp);
+          ctx.lineTo(P.cnv.width-P.padX,yp);	
+          ctx.fillText(y,P.padX-5,yp);	
+        }
+        ctx.stroke();
+        ctx.save();
+      }
+
+    //
       function rnd(v,p=2) {
         const m=Math.pow(10,p);
         return $.isNumeric(v) ? Math.round(v*m)/m : v;
