--- a/curve.html
+++ b/curve.html
@@ -108,11 +108,10 @@
 
 		setupPlot('FLOW RATE');
 		
-		ctx.translate(.33*PAD,Cnv.height/2);
-		ctx.rotate(-Math.PI/2);
-		ctx.fillText('HEAD',0,0);	
-		
-		ctx.restore();
+		ctx.textAlign='right';
+		ctx.textBaseline='bottom';
+		ctx.fillStyle = '#FECB00';
+		ctx.fillText("HEAD",Cnv.width-P.padX,P.padY-5);
 
 		ctx.lineWidth = 2;
 		ctx.strokeStyle = "#FECB00";	
