--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         return (P.stepY*P.cntY-y)*(P.cnv.height-P.padY*2)/(P.stepY*P.cntY)+P.padY;
       }
 
-      function setupPlot(lblX) {
+      function setupPlot(lblX,lblY) {
         const ctx = P.cnv.getContext('2d');
 
         ctx.strokeStyle = "#5d9300";
@@ -136,6 +136,11 @@
         ctx.textAlign = 'center';
         ctx.fillText(lblX,Cnv.width/2,Cnv.height-.33*P.padY);
         
+        ctx.textAlign='right';
+        ctx.textBaseline='bottom';
+        ctx.fillStyle = '#FECB00';
+        ctx.fillText(lblY,P.cnv.width-P.padX,P.padY-5);
+
       }
 
     //
