--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
         ctx.fillStyle = '#FECB00';
         ctx.fillText(lblY,P.cnv.width-P.padX,P.padY-5);
 
+        ctx.lineWidth = 2;
+        ctx.strokeStyle = "#FECB00";	
+        ctx.beginPath();
+
       }
 
     //
