--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       }
 
       function setupPlot(lblX,lblY) {
-        const ctx = P.cnv.getContext('2d');
+        const ctx = P.ctx = P.cnv.getContext('2d');
 
         ctx.strokeStyle = "#5d9300";
         ctx.fillStyle = "white";
