--- a/motor_perf.html
+++ b/motor_perf.html
@@ -62,12 +62,12 @@
 		$('#plot-btn').hide();
 		$(Cnv).show();
 
-		setupPlot('Motor Shaft Load (%)','Efficiency (%)');
+		const ctx = setupPlot('Motor Shaft Load (%)','Efficiency (%)');
 				
-		P.ctx.fillStyle = '#1F82BB';
-		P.ctx.fillText("Power Factor (%)",Cnv.width-P.padX,P.padY-5-15);
-		P.ctx.fillStyle = 'white';
-		P.ctx.fillText("Current (% FLC)",Cnv.width-P.padX,P.padY-5-30);
+		ctx.fillStyle = '#1F82BB';
+		ctx.fillText("Power Factor (%)",Cnv.width-P.padX,P.padY-5-15);
+		ctx.fillStyle = 'white';
+		ctx.fillText("Current (% FLC)",Cnv.width-P.padX,P.padY-5-30);
 
 		let m = new Map();		
 		for (let x=0; rnd(x)<=120; x+=12/10) {		
@@ -76,12 +76,12 @@
 			})));	
 		}
 		function strokeIt(col,prop) {
-			P.ctx.strokeStyle = col;	
-			P.ctx.beginPath();
+			ctx.strokeStyle = col;	
+			ctx.beginPath();
 			for (let [x,y] of m.entries()) {
-				P.ctx.lineTo(xPos(x), yPos(y[prop]));
+				ctx.lineTo(xPos(x), yPos(y[prop]));
 			}
-			P.ctx.stroke();
+			ctx.stroke();
 		}
 		strokeIt('#FECB00','efficiency');
 		strokeIt('white','current');
