--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
       function setupPlot(lblX,lblY) {
         const ctx = P.cnv.getContext('2d');
+        $('#plot_btn').hide();
+        $('#plot').show();
 
         ctx.strokeStyle = "#5d9300";
         ctx.fillStyle = "white";
