--- a/curve.html
+++ b/curve.html
@@ -101,11 +101,8 @@
 		$('#K').text(rnd(k,6));
 
 		const ctx = setupPlot('FLOW RATE','HEAD');
-				
-		for (let x=0; rnd(x)<=P.stepX*P.cntX; x+=P.stepX/10) {			
-			ctx.lineTo(xPos(x), yPos(hS+k*Math.pow(x,1.9)));		
-		}
-		ctx.stroke();
+
+		curve(x => hS+k*Math.pow(x,1.9));				
 	}
 
 	Conds.filter(c => c.grid).forEach(c => {
