--- a/motor_perf.html
+++ b/motor_perf.html
@@ -73,36 +73,15 @@
 					load_factor: x/100
 				}));
 				m.set(x,r);
-				//console.log(r.efficiency);
 			}
 			return r;
 		}
-		/*		
-		for (let x=0; rnd(x)<=120; x+=12/10) {		
-			m.set(x,Bridge.motorPerformance(setData({
-				load_factor: x/100
-			})));	
-		}
-		*/
 		curve(x => get(x).efficiency);
-		curve(x => get(x).current,'white');
+		curve(x => get(x).current
+		},'white');
 		curve(x => get(x).pf,'#1F82BB');		
-/*
-		function strokeIt(col,prop) {
-			ctx.strokeStyle = col;	
-			ctx.beginPath();
-			for (let [x,y] of m.entries()) {
-				ctx.lineTo(xPos(x), yPos(y[prop]));
-			}
-			ctx.stroke();
-		}
-		strokeIt('#FECB00','efficiency');
-		strokeIt('white','current');
-		strokeIt('#1F82BB','pf');	
-*/	
 	}
 	 
-/////
 	Cnv = dom('canvas');
 	
 	function estFLC(e) {
@@ -122,7 +101,7 @@
 	nmAll().change(()=>{
 		$(Cnv).hide();
 		Cnv.width+=0;
-		$('#plot-btn').show();
+		$('#plot_btn').show();
 		setData(MotorPerf);
 		saveProp('motorPerf',MotorPerf);
 	});
