--- a/motor_perf.html
+++ b/motor_perf.html
@@ -77,8 +77,7 @@
 			return r;
 		}
 		curve(x => get(x).efficiency);
-		curve(x => get(x).current
-		},'white');
+		curve(x => get(x).current,'white');
 		curve(x => get(x).pf,'#1F82BB');		
 	}
 	 
