--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           const y = j*P.stepY, yp = yPos(y);
           ctx.moveTo(P.padX,yp);
           ctx.lineTo(P.cnv.width-P.padX,yp);	
-          ctx.fillText(y,P.padX-5,yp);	
+          ctx.fillText(y + (P.minY ? P.minY : 0),P.padX-5,yp);	
         }
         ctx.stroke();
         ctx.save();
