--- a/pump_eff.html
+++ b/pump_eff.html
@@ -37,7 +37,8 @@
 						pump_style: 0,
 						pump_specified: 0
 				})));
-				m.set(x,r);
+				m.set(x,r);		
+				console.log(r);		
 			}
 			return r;
 		}
