--- a/pump_eff.html
+++ b/pump_eff.html
@@ -9,7 +9,7 @@
 <div>
 	<h1>Pump Efficiency</h1>
 	Pump Style
-	<select name='pump_style' >
+	<select name='pump_style' style='vertical-align: middle'>
         <option>Choose</option>
 		<option>End suction slurry</option>
         <option>End suction sewage</option>
@@ -22,7 +22,7 @@
         <option>Vertical turbine</option>
         <option>Large end suction</option>
     </select>
-	<canvas id=plot width="700" height="500" style='margin-top: 1rem'></canvas>
+	<canvas id=plot width="700" height="500" style='margin-top:1rem'></canvas>
 </div>
 
 <script>//# sourceURL=*pump_eff
@@ -66,7 +66,7 @@
 		setData(MotorPerf);
 		saveProp('motorPerf',MotorPerf);
 	});
-	effChg();
+
 	
 </script>
 
