--- a/pump_eff.html
+++ b/pump_eff.html
@@ -54,7 +54,7 @@
 						pump_specified: 0
 				})));
 				m.set(x,r);						
-				console.log(x,r);		
+				console.log(cvt(x,FLOW,'gpm'));		
 			}
 			return r;
 		}
