--- a/pump_eff.html
+++ b/pump_eff.html
@@ -59,7 +59,7 @@
 			return r;
 		}
 		curve(x => get(x).average);
-//		curve(x => get(x).current,'white');
+		curve(x => get(x).max,'white');
 	}
 	 
 	Cnv = dom('canvas');
