--- a/pump_eff.html
+++ b/pump_eff.html
@@ -10,7 +10,7 @@
 	<h1>Pump Efficiency</h1>
 	Pump Style
 	<select name='pump_style' style='vertical-align: middle'>
-        <option>Choose</option>
+        <option selected disabled>Choose</option>
 		<option>End suction slurry</option>
         <option>End suction sewage</option>
         <option>End suction stock</option>
