--- a/index.html
+++ b/index.html
@@ -95,14 +95,26 @@
 
     <div id=container></div>
     <script>
+    
     // canvas
+
       function xPos(x) {
         return x*(P.cnv.width-P.padX*2)/(P.stepX*P.cntX)+P.padX;
       }
       function yPos(y) {
         return (P.stepY*P.cntY-y)*(P.cnv.height-P.padY*2)/(P.stepY*P.cntY)+P.padY;
       }
-      function curve(fn,col='#FECB00') {
+      function curveMulti(prop,col) {
+        curve(x => {
+          let r = P.m.get(x);
+          if (!r) {
+            r = P.getYobj(x);
+            P.m.set(x,r);						
+          }
+          return r[prop];
+        },col);
+      }
+      function curve(fn,col='#FECB00') {        
         P.ctx.strokeStyle = col;	
   			P.ctx.beginPath();
         for (let x=0; rnd(x)<=P.stepX*P.cntX; x+=P.stepX/10) {			
@@ -111,6 +123,7 @@
 		    P.ctx.stroke();
       }
       function setupPlot(lblX,lblY) {
+        P.m = new Map();
         const ctx = P.ctx = P.cnv.getContext('2d');
         $('#plot_btn').hide();
         $('#plot').show();
