--- a/motor_perf.html
+++ b/motor_perf.html
@@ -64,7 +64,7 @@
 		ctx.fillText("Power Factor (%)",Cnv.width-P.padX,P.padY-5-15);
 		ctx.fillStyle = 'white';
 		ctx.fillText("Current (% FLC)",Cnv.width-P.padX,P.padY-5-30);
-
+/*
 		let m = new Map();
 		function get(x) {
 			let r = m.get(x);
@@ -78,7 +78,15 @@
 		}
 		curve(x => get(x).efficiency);
 		curve(x => get(x).current,'white');
-		curve(x => get(x).pf,'#1F82BB');		
+		curve(x => get(x).pf,'#1F82BB');
+*/
+		P.getYobj = x => 
+			Bridge.motorPerformance(cvtArg(setData({
+				load_factor: x/100
+			})));
+		curveMulti('efficiency');
+		curveMulti('current','white');
+		curveMulti('pf','#1F82BB');		
 	}
 	 
 	Cnv = dom('canvas');
