--- a/grid.html
+++ b/grid.html
@@ -102,7 +102,7 @@
     </td>
   </tr>      
   <tr>
-    <td><div>Power Rating</div></td>
+    <td><div>Rated Power</div></td>
     <td>
       <input name='motor_rated_power'>
     </td>
