--- a/nema.html
+++ b/nema.html
@@ -10,6 +10,9 @@
 </style>
 
 <h1>NEMA</h1>
+Line Frequency <em>(Hz)</em>
+<label><input name=line type=radio value=0> 50</label>
+<label class=vsp><input name=line type=radio value=1 checked> 60</label>
 Rated Power
 <input class=vsp name='motor_rated_power'>
 Rated Speed
