--- a/specific_speed.html
+++ b/specific_speed.html
@@ -2,7 +2,8 @@
 <style>
 	canvas {
 		background-color: black;
-		margin-top: .25rem;		
+		margin-top: .25rem;	
+		display:block;	
 	}
 	#plot {
 		display:none;
@@ -12,7 +13,8 @@
 </style>
 <div>
 	<h1>Specific Speed</h1>
-	Pump Style
+	<a style='display:block' onclick='lnk(event,"what_is_ss")' href=''>What Is Specific Speed?</a><br>
+	<span>Pump Style</span>
 	<select name='pump_style' style='vertical-align: middle'>
         <option selected disabled>Choose</option>
 		<option>End suction slurry</option>
