--- a/what_is_ss.html
+++ b/what_is_ss.html
@@ -7,19 +7,19 @@ Specific speed is a numerical representation of the impeller shape.  When approp
 The standard U.S. (metric) units used to calculate specific speed are:
 </p>
 <p>
-Rotational speed: rpm (rpm)
-Flow rate: gpm (m^3/hr)
-Head: ft (m)
+Rotational speed: rpm (rpm)<br>
+Flow rate: gpm (m^3/hr)<br>
+Head: ft (m)<br>
 </p>
 <p>
 It is also standard practice to simply eliminate the gravitational constant term. The specific speed equation is to be applied to only one condition, namely the best efficiency point (BEP)
 </p>
 <p>Example:</p>
 <p>
-BEP flow rate = 5000 gpm (1135.6 m^3/hr)
-BEP head = 120 feet (36.6 m)
-Rotating speed = 1780 rpm
-Single stage pump
+BEP flow rate = 5000 gpm (1135.6 m^3/hr)<br>
+BEP head = 120 feet (36.6 m)<br>
+Rotating speed = 1780 rpm<br>
+Single stage pump<br>
 </p>
 <p>
     U.S. Specific speed = 3472; metric specific speed = 4033
