--- a/grid.html
+++ b/grid.html
@@ -50,6 +50,7 @@
         <option>End suction slurry</option>
         <option>End suction sewage</option>
         <option>End suction stock</option>
+        <option>End suction submersible sewage</option>
         <option>API double suction</option>
         <option>Multistage boiler feed</option>
         <option>End suction ANSI/API</option>
